# llvm-project

.github/workflows/: build.yml
llvm/docs/CommandGuide/: llvm-stress.rst
llvm/include/llvm/CodeGen/: SelectionDAGISel.h
llvm/include/llvm/FuzzMutate/: IRMutator.h  OpDescriptor.h  Operations.h  RandomIRBuilder.h
llvm/lib/CodeGen/SelectionDAG/: SelectionDAGISel.cpp
llvm/lib/FuzzMutate/: CMakeLists.txt  IRMutator.cpp  OpDescriptor.cpp  Operations.cpp  RandomIRBuilder.cpp
llvm/tools/llc/: llc.cpp
llvm/tools/llvm-isel-fuzzer/: llvm-isel-fuzzer.cpp
llvm/tools/llvm-opt-fuzzer/: llvm-opt-fuzzer.cpp
llvm/tools/llvm-stress/: CMakeLists.txt  llvm-stress.cpp
llvm/unittests/FuzzMutate/: OperationsTest.cpp  RandomIRBuilderTest.cpp  StrategiesTest.cpp
llvm/utils/TableGen/: DAGISelMatcher.h  DAGISelMatcherEmitter.cpp
mlir/examples/: CMakeLists.txt
mlir/examples/multi-to-shift/: CMakeLists.txt  mlir-multi-to-shift-opt.cpp
mlir/examples/multi-to-shift/tests/: bitwidth.mlir  example.mlir  multi-shl.mlir  shl.mlir
